# Statistical-training-with-the-Scipy-library

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1. Python.ipynb  2. Numpy.ipynb
