[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "statistical_training_with_the_scipi_library"
version = "0.0.1"
description = "In this repository, we cover the scipy library in Python."
authors = [
  { name = "Mohsen Mohebbi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["statistical_training_with_the_scipi_library"]
include = ["pyproject.toml", "statistical_training_with_the_scipi_library/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["statistical_training_with_the_scipi_library"]
force-sort-within-sections = true

